src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A28_2.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

// should avoid the following error:
// ERROR ROOT - C4A28_2.cd:<38,2>: 0xC4A28 The role name foo of class X2 for association (X2 (foo) <- Y2) conflicts with the role name foo for association (X1 (foo) <- Y1).

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A28_2 {
  interface X1;
  interface Y1;

  class X2 implements X1;
  class Y2 implements Y1;

  // public X1 Y1::getFoo() { ... }
  // no set method
  read-only association X1 (foo) <- Y1;

  // public X2 Y2::getFoo() { ... }
  // it overwrites the Y1::getFoo() method, but it is still compatible to Y1::getFoo() method, because X2 implements X1
  read-only association X2 (foo) <- Y2;
}
