src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A28_2.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

// should produce an error, because the associations are not read-only

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A28_2 {
  interface X1;
  interface Y1;

  class X2 implements X1;
  class Y2 implements Y1;

  // public X1 Y1::getFoo() { ... }
  // public void Y1::setFoo(X1 x1) { ... }
  association X1 (foo) <- Y1;

  // public X2 Y2::getFoo() { ... }
  // public void Y2::setFoo(X2 x2) { ... }
  association X2 (foo) <- Y2;

  // x1 = new X1();
  // y2.setFoo(x1); // is allowed, b/c Y2 extends Y1
  // X2 x2 = y2.getFoo(); // Problem, b/c it returns x1 (cf. line above) and x1 is not x2 (only x2 is x1)
  // -> the classdiagram is invalid, b/c the association `association X1 (foo) <- Y1;` is not read-only
}
